--- a/Web/content/css/identification.css
+++ b/Web/content/css/identification.css
@@ -89,7 +89,7 @@ button {
     top: 0;
     width: 900px;
     height: 100%;
-    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/sections-3.jpg");
+    background-image: url("https://i.ibb.co/3yyQY7d/email-3249062-1280.png");
     background-size: cover;
     -webkit-transition: -webkit-transform 1.2s ease-in-out;
     transition: -webkit-transform 1.2s ease-in-out;
