--- a/Web/content/css/modal.css
+++ b/Web/content/css/modal.css
@@ -153,3 +153,51 @@
 .modif__btn_ {
   border: 1px solid #e2e2e2;
 }
+
+/*------------------------------------------------*/
+/*                   Popup Perso                  */
+/*------------------------------------------------*/
+
+#fenetre {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  filter:alpha(opacity=70);
+  -moz-opacity:0.7;
+  -khtml-opacity: 0.7;
+  opacity: 0.7;
+  z-index: 100;
+  display: none;
+}
+
+.popup{
+  width: 100%;
+  margin: 0 auto;
+  display: none;
+  position: fixed;
+  z-index: 101;
+}
+.text__popup{
+  min-width: 600px;
+  width: 600px;
+  min-height: 150px;
+  margin: 100px auto;
+  background: #f3f3f3;
+  position: relative;
+  z-index: 103;
+  padding: 15px 35px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px #000;
+}
+
+.text__popup a{
+  text-decoration: none;
+  clear: both;
+  font-size: 20px;
+  font-family: sans-serif;
+  color: #d91900;
+  font-weight: bold;
+}
