--- a/Web/content/css/identification.css
+++ b/Web/content/css/identification.css
@@ -231,6 +231,17 @@ input {
     color: #cfcfcf;
 }
 
+.forgot-pass p:hover {
+    font-size: 12px;
+    color: black;
+    text-decoration: none;
+}
+.forgot-pass p:active {
+    font-size: 12px;
+    color: black;
+    text-decoration:none;
+}
+
 .submit {
     margin-top: 40px;
     margin-bottom: 20px;
